// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link passes href down to link element 1`] = `
.c0 {
  color: #0969da;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
  href="https://github.com"
/>
`;

exports[`Link renders consistently 1`] = `
.c0 {
  color: #0969da;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<a
  className="c0"
/>
`;

exports[`Link respects hoverColor prop 1`] = `
.c0 {
  color: #0969da;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: #0969da;
}

<a
  className="c0"
/>
`;

exports[`Link respects the  "sx" prop when "muted" prop is also passed 1`] = `
.c0 {
  color: #656d76;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #ffffff;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0969da;
}

<a
  className="c0"
  muted={true}
/>
`;

exports[`Link respects the "muted" prop 1`] = `
.c0 {
  color: #656d76;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:hover,
.c0:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #0969da;
}

<a
  className="c0"
  muted={true}
/>
`;
